# haskell-SlidingPuzzle

./: LICENSE  README.md  SlidingPuzzle.cabal  stack.yaml
app/: Main.hs
src/: Board.hs  Game.hs  Menu.hs  Screen.hs
