name:                SlidingPuzzle
version:             0.1.0.0
synopsis:            A sliding number puzzle game
description:         Please see README.md
homepage:            http://github.com/wschroeder/SlidingPuzzle#readme
license:             BSD3
license-file:        LICENSE
author:              William Schroeder
maintainer:          wschroeder@gmail.com
copyright:           2016 William Schroeder
category:            Console Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Screen, Menu, Game, Board
  build-depends:       base >= 4.7 && < 5
                     , random
                     , ansi-terminal
  default-language:    Haskell2010

executable SlidingPuzzle-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ansi-terminal
                     , SlidingPuzzle
  default-language:    Haskell2010

test-suite SlidingPuzzle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SlidingPuzzle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/SlidingPuzzle
